--- a/style.css
+++ b/style.css
@@ -41,3 +41,70 @@ nav li a{
 .banner-description{
     color: rgb(143, 145, 151);
 }
+.btn-primery{
+    border-radius: 8px;
+    color: aliceblue;
+    background: rgb(252, 165, 4);
+    padding: 20px 25px;
+    font-size: 1.25rem;
+    cursor: pointer;
+    border: 0;
+}
+.banner-img{
+    margin-top: 20px;
+    width:100%;
+}
+/* responsive media querues */
+/* mobile devices */
+@media screen and (max-width: 576px);{
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+
+}
+/* tablet or medium devices */
+@media  and (min-width:576px) and (max-width:960px){
+    header{
+        padding: 50px;
+    }
+    nav{
+        flex-direction: column;
+
+    } 
+    
+
+}
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+.teams-container{
+    display: flex;
+}
+.teams-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+}
+.teams-content{
+    padding-left: 70px;
+    padding-right: 70px;
+}
+.teams-title{
+    font-size: 2.8rem;
+}
+.teams-title .quick-list{
+    color: #727272;
+    font-weight: 500;
+
+}
+.teams-title .text-features{
+    color:#FF900E;
+
+}
+
+    
+
